# karaoke-generator

./: .gitignore  Pipfile  README.md  create.py  pyproject.toml  requirements.txt  separate.py
.github/: removetriton.patch
karaoke_generator/: __init__.py  generator.py
karaoke_generator/utils/: cli.py
utils/: spec_utils.py
