[tool.poetry]
name = "karaoke-video-generator"
version = "0.3.0"
description = "Fully automated creation of _acceptable_ karaoke music videos from any music on YouTube, using open source tools and AI (e.g. Whisper and MDX-Net)"
authors = ["Andrew Beveridge <andrew@beveridge.uk>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "karaoke_generator" }]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
yt-dlp = "^2023.6.22"
pydub = "^0.25.1"
audio-separator = "^0"
lyrics-transcriber = "^0.5.1"
python-slugify = "^8.0.1"
regex = "^2023.6.3"

[tool.poetry.scripts]
karaoke-generator = 'karaoke_generator.utils.cli:main'

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"

[tool.black]
line-length = 140

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
