[tool.poetry]
name = "karaoke-generator"
version = "0.6.0"
description = "Fully automated creation of _acceptable_ karaoke music videos from any music on YouTube, using open source tools and AI (e.g. Whisper and MDX-Net)"
authors = ["Andrew Beveridge <andrew@beveridge.uk>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "karaoke_generator" }]
homepage = "https://github.com/karaokenerds/karaoke-generator"
repository = "https://github.com/karaokenerds/karaoke-generator"
documentation = "https://github.com/karaokenerds/karaoke-generator/blob/main/README.md"

[tool.poetry.dependencies]
python = ">=3.9"
yt-dlp = ">=2024.07.09"
pydub = ">=0.25"
audio-separator = ">=0.6"
lyrics-transcriber = ">=0.16"
python-slugify = ">=8"
regex = ">=2023"
tldextract = ">=3"
# Note: after adding lyrics-transcriber with poetry lock, I then removed all traces of triton
# from poetry.lock before running poetry install, as triton doesn't support macOS but isn't actually needed for whisper.
# This was the only way I was able to get a working cross-platform build published to PyPI.
# To update the lockfile and install/upgrade dependencies, modify the dependency list above then run:
# poetry lock; patch -p0 poetry.lock <.github/removetriton.patch; poetry install

[tool.poetry.scripts]
karaoke-generator = 'karaoke_generator.utils.cli:main'

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"

[tool.black]
line-length = 140

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
